--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17515713674"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17515713674');
+    </script>
+
+    <!-- Event snippet for Contacto (1) conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-17515713674/IDDaCOLyhZMbEIqpkqBB',
+          'value': 1.0,
+          'currency': 'BRL'
+      });
+    </script>
+
   </head>
 
   <body>
