--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       gtag('config', 'AW-17515713674');
     </script>
 
-    <!-- Event snippet for Contacto (1) conversion page -->
-    <script>
-      gtag('event', 'conversion', {
-          'send_to': 'AW-17515713674/BGWLCPPOr5AbElqpkqBB',
-          'value': 1.0,
-          'currency': 'BRL'
-      });
-    </script>
+<!-- Event snippet for Lead TEAQC conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17630747161/QY3_CLCBw6kbEJm0_9ZB',
+      'value': 1.0,
+      'currency': 'BRL'
+  });
+</script>
 
   </head>
 
