--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       'currency': 'BRL'
   });
 </script>
-
+<meta name="facebook-domain-verification" content="rm6uvhwjiwlxl79fkf4915rgsmc2fg" />
   </head>
 
   <body>
